--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@ div#color-area {
     border: 1px solid black;
     background-color: black;
 }
-
 body {
-    backgroung-color: blue;
+    background-color: blue;
 }
